Added FB as a login provider

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
 			<h1>ChatCAT | Login </h1>
 		</div>
 		<div class="loginButton">
-			<a href="rooms.htm">
+			<a href="/auth/facebook">
 				<img id="loginBtnImg" src="/img/fbLoginBtn.png" alt="Sign-In with Facebook">
 			</a>
 
