--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -4,17 +4,27 @@
 	<meta charset="UTF-8">
 	<title>ChatCat - Topic Goes Here</title>
 	<link rel="stylesheet" href="/css/chatroomStyles.css">
-	<script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+
+  <script>
+    $( () => {
+      let socket = io('<%= host %>' + '/roomslist');
+      let roomId = '<%= roomID %>'
+      let user = '<%= user.fullName %>'
+      let userPic = '<%= user.profilePic %>'
+    });
+  </script>
 </head>
 <body>
 	<div class="container">
 		<div class="titlePanel">
-			<h1>ChatCAT | Topic Goes Here</h1>
+			<h1>ChatCAT | <%= room %> </h1>
 		</div>
 		<div class="controls">
 			<div class="userPicHolder"><img src="<%= user.profilePic %>" alt="<%= user.fullName %>"></div>
 			<p class="userName"><%= user.fullName %></p>
-			<a href="rooms.htm" id="roomsBtn">Rooms</a>
+			<a href="/rooms" id="roomsBtn">Rooms</a>
 			<a href="/logout" id="logOutBtn">Logout</a>
 		</div>
 		<div class="chatListDiv">
@@ -24,7 +34,7 @@
 				<div class="chatBlock">
 					<div class="userPic"><img src="/img/user.jpg"></div>
 					<div class="chatMsg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti perferendis eius aut nesciunt necessitatibus ad nulla, qui sequi, id nam. Possimus odit aut nisi veritatis amet distinctio id officiis ipsam!</div>
-				</div>					
+				</div>
 				<!-- loop end -->
 				</div>
 				<div class="typePanel">
