--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -5,6 +5,41 @@
 	<title>ChatCat - Rooms</title>
 	<link rel="stylesheet" href="/css/roomsStyles.css">
 	<script src="/js/jquery-2.1.4.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+
+	<script>
+    'use strict'
+
+		$(() => {
+      let socket = io('<%= host %>' + '/roomslist');
+      let renderChatRooms = chatrooms => {
+        console.log('chatrooms: ', chatrooms);
+        let roomsListDiv = $('#roomsListUL');
+        let listStr = ''
+        for (let cat of JSON.parse(chatrooms)) {
+          listStr += `<a href="/chat/${cat.roomID}"><li>${cat.room}</li></a>`
+        }
+        roomsListDiv.html('').append(listStr);
+      }
+
+      // GEt list of rooms
+      socket.emit('getChatrooms');
+
+      socket.on('chatRoomList', chatrooms => {
+        renderChatRooms(chatrooms);
+      })
+
+
+			let newRoomInput = $('input[name="roomName"]');
+
+			$('#createBtn').on('click', () => {
+				if(newRoomInput.val() !== ''){
+					socket.emit('createRoom', newRoomInput.val());
+					newRoomInput.val('');
+				}
+			})
+		});
+  </script>
 </head>
 <body>
 	<div class="container">
@@ -23,8 +58,8 @@
 		<div class="roomsListDiv">
 			<ul class="roomsList" id="roomsListUL">
 			<!-- Loop list items here -->
-				<a href="chatroom.htm"><li>World Cuisine</li></a>
-				<a href="chatroom.htm"><li>Coffee and Conversations</li></a>
+				<!-- <a href="chatroom.htm"><li>World Cuisine</li></a>
+				<a href="chatroom.htm"><li>Coffee and Conversations</li></a> -->
 			<!-- Loop ends -->
 			</ul>
 		</div>
