--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -2,17 +2,43 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>ChatCat - Topic Goes Here</title>
+	<title>ChatCat | <%= room %></title>
 	<link rel="stylesheet" href="/css/chatroomStyles.css">
   <script src="/js/jquery-2.1.4.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
 
   <script>
     $( () => {
-      let socket = io('<%= host %>' + '/roomslist');
-      let roomId = '<%= roomID %>'
-      let user = '<%= user.fullName %>'
-      let userPic = '<%= user.profilePic %>'
+      let socket = io('<%= host %>' + '/chatter');
+      let roomID = '<%= roomID %>';
+      let user = '<%= user.fullName %>';
+      let userPic = '<%= user.profilePic %>';
+      let chatUsers = $('.chatUsers');
+
+      socket.on('connect', () => {
+        socket.emit('join', {
+          roomID,
+          user,
+          userPic
+        });
+      });
+
+      let userList = user => {
+        return `<div class="userBlock">
+					<div class="userPic"><img src="${user.userPic}" alt="${user.user}"></div>
+					<div class="cuserName">${user.user}</div>
+				</div>`
+      }
+
+      socket.on('updateUserList', data => {
+        console.log('data: ', data);
+        let parsedData = JSON.parse(data);
+        let usersListData = '';
+        for (let user of parsedData) {
+          usersListData += userList(user);
+        }
+        chatUsers.html('').html(usersListData);
+      })
     });
   </script>
 </head>
