--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -14,6 +14,8 @@
       let user = '<%= user.fullName %>';
       let userPic = '<%= user.profilePic %>';
       let chatUsers = $('.chatUsers');
+      let chatInput = $('input[name="userInput"]');
+      let chatMessDiv = $('.chatMessages');
 
       socket.on('connect', () => {
         socket.emit('join', {
@@ -30,15 +32,47 @@
 				</div>`
       }
 
+      let updateFeed = (userPic, message) => {
+        let template = `
+        <div class="chatBlock">
+					<div class="userPic"><img src="${userPic}"></div>
+					<div class="chatMsg">${message}</div>
+        </div>`;
+
+        $(template).hide().prependTo(chatMessDiv).slideDown(200);
+
+      }
+
       socket.on('updateUserList', data => {
-        console.log('data: ', data);
         let parsedData = JSON.parse(data);
         let usersListData = '';
         for (let user of parsedData) {
           usersListData += userList(user);
         }
         chatUsers.html('').html(usersListData);
+      });
+
+      socket.on('inMessage', data => {
+        let parsedData = JSON.parse(data);
+        updateFeed(parsedData.userPic, parsedData.message);
       })
+
+      chatInput.on('keyup', function(evt) {
+        evt.preventDefault();
+        let messageField = $(this);
+        if (evt.which === 13 && messageField.val() !== '') {
+          socket.emit('newMessage', {
+            roomID,
+            user,
+            userPic,
+            message: messageField.val()
+          });
+          // update local feed
+          updateFeed(userPic, messageField.val());
+          messageField.val('');
+        }
+      });
+
     });
   </script>
 </head>
@@ -57,10 +91,10 @@
 			<div class="chatMessagesPanel">
 				<div class="chatMessages">
 				<!-- Loop this for chat messages -->
-				<div class="chatBlock">
+				<!-- <div class="chatBlock">
 					<div class="userPic"><img src="/img/user.jpg"></div>
 					<div class="chatMsg">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti perferendis eius aut nesciunt necessitatibus ad nulla, qui sequi, id nam. Possimus odit aut nisi veritatis amet distinctio id officiis ipsam!</div>
-				</div>
+				</div> -->
 				<!-- loop end -->
 				</div>
 				<div class="typePanel">
@@ -70,10 +104,10 @@
 			</div>
 			<div class="chatUsers">
 			<!-- Loop this for chat users -->
-				<div class="userBlock">
+				<!-- <div class="userBlock">
 					<div class="userPic"><img src="/img/user.jpg" alt="John Doe"></div>
 					<div class="cuserName">John Doe</div>
-				</div>
+				</div> -->
 			<!-- loop end -->
 			</div>
 		</div>
