Replace the socket io configuration to use the rigth host

--- a/views/rooms.ejs
+++ b/views/rooms.ejs
@@ -11,7 +11,7 @@
     'use strict'
 
 		$(() => {
-      let socket = io('<%= host %>' + '/roomslist', {
+      let socket = io('<%= host %>' + 'roomslist', {
         transports: ['websocket']
       });
       let renderChatRooms = chatrooms => {
