--- a/views/chatroom.ejs
+++ b/views/chatroom.ejs
@@ -10,7 +10,7 @@
 
   <script>
     $( () => {
-      let socket = io('<%= host %>' + '/chatter', {
+      let socket = io('<%= host %>' + 'chatter', {
         transports: ['websocket']
       });
       let roomID = '<%= roomID %>';
